@@ -11,7 +11,7 @@ Windows
 
 #Como ejecutar
 MacOS y Linux
->java --add-open=java.base/java.lang=ALL-UNNAMED -cp ".:weka.jar" class.RNA_AG
+>java --add-opens=java.base/java.lang=ALL-UNNAMED -cp ".:weka.jar:class" RNA_AG
 
 Windows
->java --add-open=java.base/java.lang=ALL-UNNAMED -cp ".;weka.jar" class.RNA_AG
+>java --add-opens=java.base/java.lang=ALL-UNNAMED -cp ".;weka.jar;class" RNA_AG
